@@ -13,7 +13,7 @@ Stefan Morrell
     The patch for Apprentices/revamping Lacandon Conquest
 Jon Bagshaw
     Working with Stefan on Lacandon Conquest
-Tom  (aka Tzard)
+Tom Alsen (aka Tzarg)
     Implementation of the FIND ALL order
 Joseph Traub
     Changes, updates, and merging a few disparate branches
